# cherrypyBrowse

./: .pre-commit-config.yaml  README.md  dkcsvdb.py  main.py  pyproject.toml  requirements.txt  some-file-backup.csv  some-file.csv
src/: main.py
src/cherrypyBrowse/: __init__.py  cherrypyBrowse.py  some-file.csv
src/static/css/: stylesheet.css
src/static/js/: script.js
src/templates/: table_template.html
static/: stylesheet.css
templates/: table_template.html
test/: test_main.py
test/unit/: test_cherrypyBrowse.py  test_main.py
