[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "cherrypyBrowse"
version = "0.0.1"
authors = [
  { name="TheFelodin", email="felodin.blutstein@gmail.com" },
]
description = "A simple testproject for a cherrypy based webserver accessing and modifying a csv file."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheFelodin/cherrypyBrowse"
"Bug Tracker" = "https://github.com/TheFelodin/cherrypyBrowse/issues"